--- a/conf/app.conf
+++ b/conf/app.conf
@@ -6,11 +6,12 @@ FlashSeperator=ez
 ServerName=Microsoft-IIS/6.0
 EnableGzip=true
 StaticExtensionsToGzip=.css, .js
-EnableXSRF=false
+EnableXSRF=true
 XSRFKEY=not_for_jerk
+xsrfexpire = 1200
 sessionon=true
 sessionprovider=memory
-sessionname=haitou_cc
+sessionname=session
 mysqluser=alialiali
 mysqlpass=ZHou1987
 mysqlurls=115.28.94.157
